Fix hovers Fix Close visibility

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -37,7 +37,7 @@ header {
   transition: .25s all;
 }
 
-#closeNav{
+#closenav{
   position: absolute;
   right: 10px;
   top: 10px;
